# MonkeCasino

./: .env.example  README.md  package-lock.json  package.json
backend/: server.js
backend/config/: db.js
backend/controllers/: user.js
backend/errors/: CustomError.js  NotFoundError.js  ValidationError.js
backend/middlewares/: auth.js
backend/models/: user.js
backend/routes/: user.js
backend/utils/: build.zig  build.zig.zon  userapi.zig
frontend/: index.html  package.json
frontend/public/: profile_pictures.json
frontend/src/: App.jsx  main.jsx
frontend/src/context/: useAuth.jsx
frontend/src/pages/: BlackJack.jsx  Casino.jsx  Forbidden.jsx  ForgotPassword.jsx  Greeting.jsx  Login.jsx  NotFound.jsx  Profile.jsx  ProfilePicturePicker.jsx  Register.jsx  Roulette.jsx  Slots.jsx
frontend/src/routes/: ProtectedRoute.jsx  Routes.jsx
frontend/src/services/: AuthService.jsx
frontend/src/styles/: BlackJack.module.css  Casino.module.css  Forbidden.module.css  Greeting.module.css  Login.module.css  NotFound.module.css  Profile.module.css  ProfilePicturePicker.module.css  Register.module.css  Roulette.module.css  Slots.module.css  index.module.css
frontend/src/utils/: ErrorHandler.jsx  getProfilePictures.js
games/: build.zig  build.zig.zon  main.zig
games/blackjack/: Cargo.toml
games/blackjack/src/: game_logic.rs  handlers.rs  main.rs  test.html  tests.rs
games/blackjack/src/bot/: bot.rs
games/blackjack/src/game/: dealer.rs  deck.rs  game_state.rs  mod.rs  player.rs  rules.rs
games/slots/: slots.zig
views/pages/: index.ejs
(+9 files in other folders)
